--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Landing Page</title>
@@ -22,13 +22,26 @@
             <a href="#">header link one</a>
           </li>
           <li>
-            <a href="#">header link one</a>
+            <a href="#">header link two</a>
           </li>
           <li>
-            <a href="#">header link one</a>
+            <a href="#">header link three</a>
           </li>
         </ul>
       </div>
     </nav>
+    <header class="header">
+      <div class="container">
+        <div class="header-text">
+          <h1 class="heading-primary">This website is awesome</h1>
+          <p class="paragraph">
+            This website has some subtext that goes her under the main title.
+            It's smaller font and the color is lower contrast
+          </p>
+          <a href="#" class="button">Sign up</a>
+        </div>
+        <div class="header-img">this is a placeholder for an image</div>
+      </div>
+    </header>
   </body>
 </html>
