Add cards section

--- a/index.html
+++ b/index.html
@@ -43,5 +43,34 @@
         <div class="header-img">this is a placeholder for an image</div>
       </div>
     </header>
+    <section class="cards-section">
+      <h2 class="heading-secondary">Some random information.</h2>
+      <div class="container">
+        <div class="cards-box">
+          <div class="card"></div>
+          <p class="paragraph">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="cards-box">
+          <div class="card"></div>
+          <p class="paragraph">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="cards-box">
+          <div class="card"></div>
+          <p class="paragraph">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="cards-box">
+          <div class="card"></div>
+          <p class="paragraph">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
