--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Landing Page</title>
@@ -70,6 +70,16 @@
             this is some subtext under an illustration or image
           </p>
         </div>
+      </div>
+    </section>
+    <section class="testimonials-section">
+      <div class="container">
+        <q class="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just a filling up space, or maybe will actually read it. Who
+          knows? All i know is that it looks nice.
+        </q>
+        <span>-Thor, God of Thunder</span>
       </div>
     </section>
   </body>
