--- a/index.html
+++ b/index.html
@@ -82,5 +82,16 @@
         <span>-Thor, God of Thunder</span>
       </div>
     </section>
+    <section class="cta-section">
+      <div class="container">
+        <div class="cta-text">
+          <h3 class="heading-tertiary">Call to action! It's time!</h3>
+          <p class="paragraph">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <a href="#" class="button">Sign up</a>
+      </div>
+    </section>
   </body>
 </html>
