--- a/index.html
+++ b/index.html
@@ -93,5 +93,6 @@
         <a href="#" class="button">Sign up</a>
       </div>
     </section>
+    <footer class="footer">Copyright &copy; The Odin Project 2022</footer>
   </body>
 </html>
